--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;900&display=swap");
+
+*,
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Nunito Sans";
+  color: #fff;
+  line-height: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+  text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
+  font-size: 23vw;
+  font-weight: 900;
+  line-height: 19vw;
+}
+
+.pageWrapper {
+  width: 100vw;
+  height: 100vh;
+  background-position: 57%;
+  background-size: cover;
+}
+
+.gradient {
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
   display: flex;
-  flex-direction: column;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+}
+
+.navigation {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 7vw 0 0 7vw;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.icon {
+  width: 7vw;
+  padding-right: 4vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navItem {
+  font-size: 7vw;
+  font-weight: 700;
+}
+
+.logo {
+  width: 25vw;
+  padding: 2vw 0 0 7vw;
+}
+
+.name {
+  padding: 0 0 7vw 7vw;
+  margin-top: -9vw;
+}
+.communities {
+  font-size: 12vw;
+  line-height: 0;
+}
+
+.that {
+  font-size: 19vw;
+  line-height: 0;
+}
+
+.care {
+  font-size: 30vw;
+  line-height: 0;
 }
