--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Nunito Sans";
-  color: #fff;
   line-height: 0;
+}
+
+body {
+  color: #fff;
 }
 
 img {
@@ -24,6 +27,18 @@ h1 {
   line-height: 19vw;
 }
 
+h2 {
+  font-weight: 900;
+  font-size: 15vw;
+  line-height: 15vw;
+  margin-top: 7vw;
+}
+
+p {
+  font-size: 4vw;
+  line-height: 7vw;
+}
+
 .pageWrapper {
   width: 100vw;
   height: 100vh;
@@ -31,52 +46,6 @@ h1 {
   background-size: cover;
 }
 
-.gradient {
-  width: 100vw;
-  height: 100vh;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-end;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-  padding: 7vw 0 0 7vw;
-  cursor: pointer;
-}
-
-.icon {
-  width: 7vw;
-  padding-right: 4vw;
-}
-
-.navItem {
-  font-size: 7vw;
-  font-weight: 700;
-}
-
-.logo {
-  width: 25vw;
-  padding: 2vw 0 0 7vw;
-}
-
-.name {
-  padding: 0 0 7vw 7vw;
-  margin-top: -9vw;
-}
-.communities {
-  font-size: 12vw;
-  line-height: 0;
-}
-
-.that {
-  font-size: 19vw;
-  line-height: 0;
-}
-
-.care {
-  font-size: 30vw;
-  line-height: 0;
+.Link {
+  color: #fff;
 }
