--- a/src/App.css
+++ b/src/App.css
@@ -29,14 +29,20 @@ h1 {
 
 h2 {
   font-weight: 900;
-  font-size: 15vw;
+  font-size: 14vw;
+  letter-spacing: -0.5vw;
   line-height: 15vw;
   margin-top: 7vw;
 }
 
+h3 {
+  font-size: 5vw;
+  line-height: 5vw;
+}
+
 p {
   font-size: 4vw;
-  line-height: 7vw;
+  line-height: 6vw;
 }
 
 .pageWrapper {
