--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,55 +1,121 @@
-.gradient {
-  width: 100vw;
-  height: 100vh;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-end;
+@media only screen and (max-width: 500px) {
+  .gradient {
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-end;
+  }
+
+  .navigation {
+    display: flex;
+    align-items: center;
+    padding: 7vw 0 0 7vw;
+    cursor: pointer;
+  }
+
+  .icon {
+    width: 7vw;
+    padding-right: 4vw;
+  }
+
+  .navItem {
+    font-size: 7vw;
+    font-weight: 700;
+    transition: 0.12s ease;
+  }
+
+  .logo {
+    width: 25vw;
+    padding: 10vw 0 0 7vw;
+  }
+
+  .name {
+    padding: 0 0 7vw 7vw;
+    margin-top: -10vw;
+  }
+  .communities {
+    font-size: 12vw;
+    line-height: 0;
+  }
+
+  .that {
+    font-size: 15vw;
+    line-height: 0;
+  }
+
+  .care {
+    font-size: 25vw;
+    line-height: 0;
+    margin-bottom: 0;
+  }
+
+  .navItem:hover {
+    font-size: 8vw;
+  }
 }
 
-.navigation {
-  display: flex;
-  align-items: center;
-  padding: 7vw 0 0 7vw;
-  cursor: pointer;
-}
+@media only screen and (min-width: 501px) {
+  .gradient {
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-end;
+  }
 
-.icon {
-  width: 7vw;
-  padding-right: 4vw;
-}
+  .navigation {
+    display: flex;
+    align-items: center;
+    padding: 2vw 0 0 7vw;
+    cursor: pointer;
+  }
 
-.navItem {
-  font-size: 7vw;
-  font-weight: 700;
-  transition: 0.12s ease;
-}
+  .icon {
+    width: 3vw;
+    padding-right: 1vw;
+  }
 
-.logo {
-  width: 25vw;
-  padding: 10vw 0 0 7vw;
-}
+  .navItem {
+    font-size: 3vw;
+    font-weight: 700;
+    transition: 0.12s ease;
+  }
 
-.name {
-  padding: 0 0 7vw 7vw;
-  margin-top: -10vw;
-}
-.communities {
-  font-size: 12vw;
-  line-height: 0;
-}
+  .logoStuff {
+    display: flex;
+    align-items: center;
+  }
 
-.that {
-  font-size: 15vw;
-  line-height: 0;
-}
+  .logo {
+    width: 15vw;
+    padding: 0 0 0 7vw;
+    margin-right: -5vw;
+  }
 
-.care {
-  font-size: 25vw;
-  line-height: 0;
-  margin-bottom: 0;
-}
+  .name {
+    padding: 0 0 0 7vw;
+    line-height: 5vw;
+  }
+  .communities {
+    font-size: 4vw;
+    line-height: 0;
+  }
 
-.navItem:hover {
-  font-size: 8vw;
+  .that {
+    font-size: 5vw;
+    line-height: 0;
+  }
+
+  .care {
+    font-size: 7vw;
+    line-height: 0;
+    margin-bottom: 0;
+  }
+
+  .navItem:hover {
+    font-size: 4vw;
+  }
 }
