--- a/src/App.css
+++ b/src/App.css
@@ -21,37 +21,76 @@ a {
   text-decoration: none;
 }
 
-h1 {
-  font-size: 23vw;
-  font-weight: 900;
-  line-height: 19vw;
-}
-
-h2 {
-  font-weight: 900;
-  font-size: 14vw;
-  letter-spacing: -0.5vw;
-  line-height: 15vw;
-  margin-top: 7vw;
-}
-
-h3 {
-  font-size: 5vw;
-  line-height: 5vw;
-}
-
-p {
-  font-size: 4vw;
-  line-height: 6vw;
+.Link {
+  color: #fff;
 }
 
 .pageWrapper {
-  width: 100vw;
-  height: 100vh;
-  background-position: 57%;
+  background-position: center;
   background-size: cover;
 }
 
-.Link {
-  color: #fff;
+@media only screen and (max-width: 500px) {
+  h1 {
+    font-size: 23vw;
+    font-weight: 900;
+    line-height: 19vw;
+  }
+
+  h2 {
+    font-weight: 900;
+    font-size: 14vw;
+    letter-spacing: -0.5vw;
+    line-height: 15vw;
+    margin-top: 7vw;
+  }
+
+  h3 {
+    font-size: 5vw;
+    line-height: 5vw;
+  }
+
+  p {
+    font-size: 4vw;
+    line-height: 6vw;
+  }
+
+  .pageWrapper {
+    width: 100vw;
+    height: 100vh;
+    background-position: 57%;
+    background-size: cover;
+  }
+}
+
+@media only screen and (min-width: 501px) {
+  h1 {
+    font-size: 10vw;
+    font-weight: 900;
+    line-height: 7vw;
+  }
+
+  h2 {
+    font-weight: 900;
+    font-size: 5vw;
+    line-height: 7vw;
+    margin-top: 2vw;
+  }
+
+  h3 {
+    font-size: 2vw;
+    line-height: 2vw;
+  }
+
+  p {
+    font-size: 1.5vw;
+    line-height: 1.5vw;
+  }
+
+  .pageWrapper {
+    width: 100vw;
+    height: 100vh;
+    background-position: 57%;
+    background-size: cover;
+  }
 }
