--- a/src/components/Events.css
+++ b/src/components/Events.css
@@ -1,20 +1,22 @@
-.eventWrapper {
-  width: 100%;
-  border: 3px solid #000000;
-  box-sizing: border-box;
-  border-radius: 12px;
-  padding: 4vw;
-  margin-top: 4vw;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  cursor: pointer;
-}
+@media only screen and (max-width: 500px) {
+  .eventWrapper {
+    width: 100%;
+    border: 3px solid #000000;
+    box-sizing: border-box;
+    border-radius: 12px;
+    padding: 4vw;
+    margin-top: 4vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+  }
 
-.right {
-  width: 10vw;
-}
+  .right {
+    width: 10vw;
+  }
 
-.Link .eventWrapper {
-  color: #281111;
+  .Link .eventWrapper {
+    color: #281111;
+  }
 }
