--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;900&display=swap");
 
-*,
 html,
 body {
   margin: 0;
   padding: 0;
   font-family: "Nunito Sans";
   line-height: 0;
+  transition: 0.7s ease;
 }
 
 body {
-  color: #fff;
+  color: #1e1d1a;
 }
 
 img {
@@ -19,6 +19,7 @@ img {
 
 a {
   text-decoration: none;
+  color: #1e1d1a;
 }
 
 .Link {
@@ -28,58 +29,200 @@ a {
 .pageWrapper {
   background-position: center;
   background-size: cover;
+  margin: 0;
+}
+
+.yellowWrapper {
+  background: rgba(255, 247, 176, 0.73);
+  border-radius: 4px;
+  transition: 0.7s ease;
+}
+
+.hero:hover {
+  padding: 6vw;
+}
+
+.menuBar {
+  padding: 1vw;
+  display: flex;
+  justify-content: space-between;
+}
+
+.title {
+  text-transform: lowercase;
+  width: 34vw;
+  padding: 1vw;
+  text-align: center;
+}
+
+.menuToggleHolder {
+  display: flex;
+  align-items: center;
+  padding: 1vw;
+  cursor: pointer;
+
+  transition: 0.7s ease;
+}
+
+.menuToggleHolder:hover {
+  padding: 1.5vw;
+}
+
+.menuToggle {
+  width: 3vw;
+  height: 0.7vw;
+  border: 4px solid #1e1d1a;
+  height: 0px;
+  margin: 0.5vw 0 0.5vw 1vw;
+  stroke-linecap: round;
+  border-radius: 10px;
+}
+
+.heroWrapper {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero {
+  width: max-content;
+  padding: 5vw;
+}
+
+.hero h3 {
+  line-height: 0;
+}
+
+.button {
+  background: #1e1d1a;
+  border-radius: 4px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  font-size: 1.5vw;
+  padding: 1.5vw;
+  width: max-content;
+  cursor: pointer;
+  margin-top: 3vw;
+  outline: none;
+
+  transition: 0.7s ease;
+}
+
+.button:hover {
+  padding: 1.7vw;
+}
+
+.rightArrow {
+  width: 5vw;
+  padding-left: 1.5vw;
+}
+
+.menu {
+  background: #fff;
+}
+
+.menuTopPortion {
+  display: flex;
+  justify-content: space-between;
+  height: 90vh;
+}
+
+.menuItems {
+  padding-top: 20vh;
+  padding-left: 5vw;
+  width: 30vw;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+}
+
+.menuItem {
+  padding-top: 3vh;
+}
+
+.menuItem:hover {
+  font-size: 5.5vw;
+}
+
+.menuPhotoHolder {
+  background-position: center;
+  background-size: cover;
+  min-height: 100%;
+  width: 100%;
+}
+
+.aboutUs {
+  padding: 10vh 10vw;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 0 auto;
+}
+
+.events {
+  padding: 0 10vw;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  background-position: center;
+  background-size: cover;
+}
+
+.eventsLabel {
+  padding: 1vw;
+}
+
+.eventWrapper {
+  padding: 3vw;
+  margin: 4vw;
+}
+
+.eventsHolder {
+  display: flex;
+}
+
+.contactWrapper {
+  width: 90vw;
+  height: 90vh;
+  margin: 5vw auto;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footerWrapper {
+  width: 90vw;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  border-top: 4px solid #1e1d1a;
+  padding: 5vw 0;
 }
 
 @media only screen and (max-width: 500px) {
   h1 {
-    font-size: 23vw;
+    font-size: 6vw;
     font-weight: 900;
-    line-height: 19vw;
+    line-height: 5vw;
   }
 
   h2 {
     font-weight: 900;
-    font-size: 14vw;
-    letter-spacing: -0.5vw;
-    line-height: 15vw;
-    margin-top: 7vw;
-  }
-
-  h3 {
     font-size: 5vw;
     line-height: 5vw;
   }
 
-  p {
-    font-size: 4vw;
-    line-height: 6vw;
-  }
-
-  .pageWrapper {
-    width: 100vw;
-    height: 100vh;
-    background-position: 57%;
-    background-size: cover;
-  }
-}
-
-@media only screen and (min-width: 501px) {
-  h1 {
-    font-size: 10vw;
-    font-weight: 900;
-    line-height: 7vw;
-  }
-
-  h2 {
-    font-weight: 900;
-    font-size: 5vw;
-    line-height: 7vw;
-    margin-top: 2vw;
-  }
-
   h3 {
-    font-size: 2vw;
-    line-height: 2vw;
+    font-weight: bold;
+    font-size: 4vw;
+    line-height: 3vw;
   }
 
   p {
@@ -92,5 +235,58 @@ a {
     height: 100vh;
     background-position: 57%;
     background-size: cover;
+  }
+
+  .videoHolder {
+    position: relative;
+    width: 80vw;
+  }
+}
+
+@media only screen and (min-width: 501px) {
+  h1 {
+    font-size: 6vw;
+    font-weight: 900;
+    line-height: 5vw;
+  }
+
+  h2 {
+    font-weight: 900;
+    font-size: 3vw;
+    line-height: 3vw;
+  }
+
+  h3 {
+    font-weight: bold;
+    font-size: 2vw;
+    line-height: 3vw;
+  }
+
+  h4 {
+    font-size: 4vw;
+    line-height: 4vw;
+    font-weight: 600;
+  }
+
+  p {
+    font-size: 1.5vw;
+    line-height: 1.5vw;
+  }
+
+  .pageWrapper {
+    width: 100vw;
+    height: 100vh;
+    background-position: 57%;
+    background-size: cover;
+  }
+
+  .videoHolder {
+    position: relative;
+    width: 50vw;
+  }
+
+  .sectionLabel {
+    font-size: 1.5vw;
+    font-weight: normal;
   }
 }
