--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -43,12 +43,14 @@
 
 @media only screen and (min-width: 501px) {
   .sliderWrapper {
-    width: 70vw;
+    width: 100vw;
     background: #fff;
     height: 100vh;
     border-radius: 0 12px 12px 0;
     color: "#281111";
     overflow: scroll;
+    position: absolute;
+    z-index: 10;
   }
 
   .cancel {
