--- a/src/App.css
+++ b/src/App.css
@@ -150,13 +150,6 @@ a {
   font-size: 5.5vw;
 }
 
-.menuPhotoHolder {
-  background-position: center;
-  background-size: cover;
-  min-height: 100%;
-  width: 100%;
-}
-
 .aboutUs {
   padding: 10vh 10vw;
   display: flex;
@@ -282,8 +275,8 @@ div[role="alert"] {
   }
 
   p {
-    font-size: 1.5vw;
-    line-height: 1.5vw;
+    font-size: 4vw;
+    line-height: 5vw;
   }
 
   .pageWrapper {
@@ -296,6 +289,74 @@ div[role="alert"] {
   .videoHolder {
     position: relative;
     width: 80vw;
+  }
+
+  .menuToggle {
+    border: 2px solid;
+  }
+
+  .aboutUs {
+    line-height: 4.5vw;
+  }
+  .sectionLabel {
+    font-size: 3.5vw;
+    font-weight: normal;
+  }
+
+  .eventsHolder {
+    flex-flow: column nowrap;
+  }
+
+  .button {
+    font-size: 3.5vw;
+    padding: 3.5vw;
+  }
+
+  .button:hover {
+    padding: 3.7vw;
+  }
+
+  .footerWrapper {
+    flex-flow: column nowrap;
+  }
+
+  .menuTopPortion {
+    display: flex;
+    justify-content: flex-end;
+    flex-flow: column-reverse nowrap;
+
+    height: 100vh;
+  }
+
+  .menuItems {
+    padding-top: 0;
+    padding-left: 0;
+    width: 100vw;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    font-size: 7vw;
+  }
+
+  .menuItem {
+    padding-top: 3vh;
+  }
+
+  .menuItem:hover {
+    font-size: 5.5vw;
+  }
+
+  .menuPhotoHolder {
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 40vh;
+  }
+
+  .close {
+    width: 15vw;
+    margin: 2vw 0;
   }
 }
 
@@ -344,6 +405,12 @@ div[role="alert"] {
   .sectionLabel {
     font-size: 1.5vw;
     font-weight: normal;
+  }
+  .menuPhotoHolder {
+    background-position: center;
+    background-size: cover;
+    min-height: 100%;
+    width: 100%;
   }
 }
 
